feat: add GET:/tasks end point for retrieving user tasks
