# src/modules/task/task.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+
+import taskController from './task.controller';
+
+const router = Router();
+
+router.get('/' ,taskController.getAll);
+
+export default router;
